Now shadowing fails when trying to compile JDK 21 classfile (v65)